--- a/gcp-devops-project/cloudbuild.yaml
+++ b/gcp-devops-project/cloudbuild.yaml
@@ -1,11 +1,12 @@
 steps:
   # Step 1: Build Docker Image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/diesel-post-453122-r/hello-world-app:$COMMIT_SHA', '.']
+    args: ['build', '-t', 'gcr.io/diesel-post-453122-r2/hello-world-app:latest', '.']
+
 
   # Step 2: Push Image to Google Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/diesel-post-453122-r/hello-world-app:$COMMIT_SHA']
+    args: ['push', 'gcr.io/diesel-post-453122-r2/hello-world-app:$COMMIT_SHA']
 
   # Step 3: Deploy to GKE
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
