--- a/gcp-devops-project/cloudbuild.yaml
+++ b/gcp-devops-project/cloudbuild.yaml
@@ -1,5 +1,4 @@
-steps:
-  # Step 1: Build Docker Image
+ Step 1: Build Docker Image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/diesel-post-453122-r2/hello-world-app:${_SHORT_SHA}', '-t', 'gcr.io/diesel-post-453122-r2/hello-world-app:latest', '.']
 
@@ -9,14 +8,15 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/diesel-post-453122-r2/hello-world-app:latest']
 
-  # Step 3: Authenticate with GKE
+  # Step 3: Deploy to GKE
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        gcloud container clusters get-credentials my-cluster --region us-central1
-        kubectl config current-context
+        gcloud container clusters get-credentials hello-world-cluster --zone us-central1-a --project diesel-post-453122-r2
+        kubectl set image deployment/hello-world-app hello-world-app=gcr.io/diesel-post-453122-r2/hello-world-app:${_SHORT_SHA}
+        kubectl rollout status deployment/hello-world-app
 
   # Step 4: Deploy to GKE
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
