--- a/gcp-devops-project/deployment.yaml
+++ b/gcp-devops-project/deployment.yaml
@@ -1,15 +1,4 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: hello-world-app
-spec:
-  replicas: 2
-  selector:
-    matchLabels:
-      app: hello-world-app
-  template:
-    metadata:
-      labels:
+
         app: hello-world-app
     spec:
       containers:
@@ -17,6 +6,18 @@ spec:
         image: gcr.io/diesel-post-453122-r2/hello-world-app:latest
         ports:
         - containerPort: 8080
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
